--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,39 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@font-face {
+  font-display: swap;
+  font-family: "Manrope";
+  font-style: medium;
+  font-weight: 500;
+  src: url("../fonts/Manrope-Medium.woff2") format("woff2");
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@font-face {
+  font-display: swap;
+  font-family: "Manrope";
+  font-style: bold;
+  font-weight: 700;
+  src: url("../fonts/Manrope-Bold.woff2") format("woff2");
+}
+
+:root {
+  --font-family: system-ui, Manrope, sans-serif;
+  --font-weight: 500;
+  --font-weight: 16px;
+
+  --background-color: #f9f9f9;
+
+  --color: #262626;
+  --link-color: #f6b83d;
+  --link-text: #fff;
+  --link-border: #fff4df;
+
+  --link-color-hover: #fff4df;
+  --link-text-hover: #f6b83d;
+  --link-border-hover: #f6b83d;
+
+  --background-color-accent: #f6b83d;
+  --background-color-light: #fff4df;
+
+  --border: 1px solid rgba(38, 38, 38, 0.15);
 
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -39,14 +67,24 @@ body,
 }
 
 body {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight);
+  font-size: var(--font-size);
+  color: var(--color);
+  background-color: var(--background-color);
 }
 
 a {
   text-decoration: none;
+  color: inherit;
   cursor: pointer;
+}
+
+ol,
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 h1,
