--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -2,16 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  padding: 77px 82px;
+  padding: 77px 84px;
   border-radius: 60px;
   background-color: var(--white);
-  gap: 32px;
 }
 
 .titleWrapper {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 32px;
 }
 
 .subtitle {
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  margin-bottom: 16px;
 }
 
 .inputs {
@@ -100,4 +101,26 @@
   line-height: 1.25;
   letter-spacing: -0.03em;
   text-transform: uppercase;
+}
+
+.linkWrapper {
+  align-self: center;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 2px;
+  font-size: 14px;
+}
+
+.text {
+  line-height: 1.43;
+  letter-spacing: -0.03em;
+  opacity: 0.5;
+}
+
+.link {
+  font-weight: 700;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--link-color);
 }
