--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 
   --border-radius: 30px;
 
-  --color: #262626;
+  --color: rgb(38, 38, 38);
   --link-color: #f6b83d;
   --link-text: #fff;
   --link-border: #fff4df;
