--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -5,6 +5,7 @@
   padding: 77px 84px;
   border-radius: 60px;
   background-color: var(--white);
+  width: 592px;
 }
 
 .titleWrapper {
@@ -49,18 +50,30 @@
     color: rgba(38, 38, 38, 0.5);
   }
 }
-
-.inputError {
-  border-color: red;
+.inputActive {
+  border-color: var(--active);
 }
 
 .inputSuccess {
-  border-color: green;
+  border-color: var(--success);
 }
 
-.inputActive {
-  border-color: yellow;
+.inputError {
+  border-color: var(--error);
 }
+
+.inputPassword {
+  background-color: var(--active);
+}
+
+/* .iconPassword {
+  position: absolute;
+  left: 358px;
+  top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
 .icon {
   position: absolute;
@@ -81,12 +94,21 @@
   height: 52px;
 }
 
+input[type="password"] ~ .icon,
+input[type="password"] + .icon {
+  position: absolute;
+  left: 358px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
 .error {
   font-size: 12px;
   left: 16px;
   position: absolute;
   top: 52px;
-  color: red;
+  color: var(--error);
 }
 
 .button {
