--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 119px 0;
@@ -15,7 +16,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 40px;
 }
+
 .num {
   font-weight: 800;
   font-size: 300px;
@@ -26,4 +29,28 @@
 .img img {
   width: auto;
   height: 300px;
+}
+
+.text {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+.link {
+  border-radius: 30px;
+  padding: 14px 30px;
+  background: #fff4df;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: -0.03em;
+  color: var(--accent);
 }
